feat(prettier-integration): html formatted using prettier

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,14 @@
   <h1>Weather Forecast App</h1>
 
   <div class="weather-options">
-    <button (click)="navigateToWeather('LWX')" class="weather-option">
+    <button
+      (click)="navigateToWeather('LWX')"
+      class="weather-option">
       District of Columbia Forecast (LWX)
     </button>
-    <button (click)="navigateToWeather('TOP')" class="weather-option">
+    <button
+      (click)="navigateToWeather('TOP')"
+      class="weather-option">
       Kansas Forecast (TOP)
     </button>
   </div>
